choc(typo): typo mistack on env file

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=5000                    # Port for the server to run on
 
 # Database Configuration
-DB_URI=mongodb://localhost:27017/my_database  # MongoDB connection string
+MONGO_URI=mongodb://localhost:27017/my_database  # MongoDB connection string
 
 # Environment
 NODE_ENV=development       # Environment (e.g., development, production, test)
